Fixed the issue with the heading for the iPad section in My work not showing

--- a/less/app.less
+++ b/less/app.less
@@ -339,7 +339,7 @@ p {
 
 .h2-heading__with-ipad--side-by-side {
 
-  @media screen and (min-width: @screen-large) {
+  @media screen and (max-width: @screen-large) {
     display: none;
   }
 }
